...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:drawable/ic_menu_gallery" />

    <Button
        android:id="@+id/galleryBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/addImage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/displayImageView"
        app:layout_constraintHorizontal_bias="0.517"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/advertiserName"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/postBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/post"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.826"
...
